<resources>
    <string name="app_name">UjianBrata</string>
    <string name="Welcome">Welcome !</string>
    <string name="getStarted">Get Started</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="tiga">3</string>
    <string name="empat">4</string>
    <string name="lima">5</string>
    <string name="enam">6</string>
    <string name="tujuh">7</string>
    <string name="lapan">8</string>
    <string name="sembilan">9</string>
    <string name="nol">0</string>
    <string name="kali">X</string>
    <string name="bagi">:</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="equals">=</string>
    <string name="reset">C</string>
</resources>